--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-opus": "^0.3.0",
     "snekfetch": "^4.0.0",
     "winston": "^2.4.2",
+    "youtube-search": "^1.1.1",
     "ytdl-core": "^0.20.4"
   }
 }
