--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "discord.js": "^11.3.2",
     "ffmpeg-binaries": "^3.2.2-3",
     "node-opus": "^0.3.0",
+    "request": "^2.87.0",
     "snekfetch": "^4.0.0",
     "winston": "^2.4.2",
     "youtube-search": "^1.1.1",
