--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "description": "test discord bot",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.3.2",
-    "ffmpeg-binaries": "^3.2.2-3",
-    "node-opus": "^0.3.0",
-    "request": "^2.87.0",
-    "snekfetch": "^4.0.0",
-    "winston": "^2.4.2",
-    "youtube-search": "^1.1.1",
+    "discord.js": "^11.5.1",
+    "ffmpeg-binaries": "^3.2.2",
+    "node-opus": "^0.3.3",
+    "request": "^2.88.0",
+    "snekfetch": "^4.0.4",
+    "winston": "^2.4.4",
+    "youtube-search": "^1.1.4",
     "ytdl-core": "^0.20.4"
   }
 }
