--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "canvas": "^2.6.0",
     "discord.js": "^11.5.1",
     "ffmpeg-binaries": "^3.2.2",
     "node-opus": "^0.3.3",
     "request": "^2.88.0",
+    "signale": "^1.4.0",
     "snekfetch": "^4.0.4",
-    "winston": "^2.4.4",
     "youtube-search": "^1.1.4",
     "ytdl-core": "^0.20.4"
   }
