--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "canvas": "^2.6.0",
+    "canvas-text-wrapper": "^0.10.2",
     "discord.js": "^11.5.1",
     "ffmpeg-binaries": "^3.2.2",
     "node-opus": "^0.3.3",
