--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "request": "^2.88.2",
     "signale": "^1.4.0",
     "snekfetch": "^4.0.4",
+    "xmlhttprequest": "^1.8.0",
     "youtube-search": "^1.1.4",
     "ytdl-core": "^3.2.2"
   }
