--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
+    "axios": "^0.21.0",
     "bufferutil": "^4.0.1",
     "canvas": "^2.6.1",
     "canvas-text-wrapper": "^0.10.2",
