--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "test discord bot",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -25,5 +25,8 @@
     "xmlhttprequest": "^1.8.0",
     "youtube-search": "^1.1.4",
     "ytdl-core": "^3.2.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
