removal of console log code and adding of config stuff.

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "PREFIX": "<@!446592480947732480> ",
     "ELEVATED": [ "137721021649125376" ],
-    "JOSH": ""
+    "JOSH": "232692226302410752"
 }
