--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "PREFIX": "<@!446592480947732480> ",
+    "PREFIXMATCH": "<@!446592480947732480>|<@446592480947732480>",
     "ELEVATED": [ "137721021649125376" ],
     "JOSH": "232692226302410752"
 }
