--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
+    "sender": "node sender.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "data/*"
+    ]
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +24,8 @@
     "discord.js": "^12.3.1",
     "ffmpeg": "0.0.4",
     "ffmpeg-binaries": "^3.2.2",
+    "inquirer": "^7.3.3",
+    "lowdb": "^1.0.0",
     "node-opus": "^0.3.3",
     "request": "^2.88.2",
     "signale": "^1.4.0",
