--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ffmpeg-binaries": "^3.2.2",
     "inquirer": "^7.3.3",
     "lowdb": "^1.0.0",
+    "moment": "^2.29.1",
     "node-opus": "^0.3.3",
     "request": "^2.88.2",
     "signale": "^1.4.0",
