--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "nodemon index.js",
     "sender": "node sender.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint:read": "prettier --check .",
+    "lint:write": "prettier --write ."
   },
   "nodemonConfig": {
     "ignore": [
@@ -38,6 +40,7 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.6",
+    "prettier": "2.4.1",
     "youtube-sr": "^4.1.7"
   }
 }
