--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/opus": "^0.3.3",
     "@discordjs/voice": "^0.6.0",
     "axios": "^0.21.0",
     "bufferutil": "^4.0.1",
@@ -26,7 +25,7 @@
     "canvas-text-wrapper": "^0.10.2",
     "discord.js": "^12.3.1",
     "ffmpeg": "0.0.4",
-    "ffmpeg-binaries": "^3.2.2",
+    "ffmpeg-static": "^4.4.0",
     "inquirer": "^7.3.3",
     "lowdb": "^1.0.0",
     "moment": "^2.29.1",
