--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon index.js",
     "sender": "node sender.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "lint:read": "prettier --check .",
     "lint:write": "prettier --write ."
   },
@@ -38,6 +38,7 @@
     "ytdl-core": "^4.9.1"
   },
   "devDependencies": {
+    "mocha": "^9.1.3",
     "nodemon": "^2.0.6",
     "prettier": "2.4.1",
     "youtube-sr": "^4.1.7"
