Install some things

--- a/.drone.yml
+++ b/.drone.yml
@@ -3,7 +3,8 @@ name: default
 
 steps:
   - name: test
-    image: python3.10-nodejs17
+    image: node
     commands:
+      - sudo apt-get install build-essential libcairo2-dev libpango1.0-dev libjpeg-dev libgif-dev librsvg2-dev
       - npm install
       - npm test
