--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.1.0",
     "@discordjs/voice": "^0.6.0",
     "axios": "^0.21.0",
     "bufferutil": "^4.0.1",
@@ -29,7 +30,6 @@
     "inquirer": "^7.3.3",
     "lowdb": "^1.0.0",
     "moment": "^2.29.1",
-    "node-opus": "^0.3.3",
     "request": "^2.88.2",
     "signale": "^1.4.0",
     "snekfetch": "^4.0.4",
