--- a/.drone.yml
+++ b/.drone.yml
@@ -8,3 +8,12 @@ steps:
     commands:
       - npm install
       - npm test
+  - name: publish
+    image: appleboy/drone-scp
+    settings:
+      host: 192.168.0.197
+      user: arthas
+      key:
+        from_secret: ssh_key
+      target: ~/staging/michael-rosenbot
+      source: ../michael-rosenbot
