--- a/.drone.yml
+++ b/.drone.yml
@@ -8,15 +8,15 @@ steps:
     commands:
       - npm install
       - npm test
-#  - name: publish
-#    image: appleboy/drone-scp
-#    settings:
-#      host: 192.168.0.197
-#      user: arthas
-#      key:
-#        from_secret: ssh_key
-#      target: ~/staging/michael-rosenbot
-#      source: ../michael-rosenbot
+  - name: publish
+    image: appleboy/drone-scp
+    settings:
+      host: 192.168.0.197
+      user: arthas
+      key:
+        from_secret: ssh_key
+      target: /home/arthas/staging/michael-rosenbot
+      source: *
   - name: ssh
     image: appleboy/drone-ssh
     settings:
@@ -26,4 +26,5 @@ steps:
         from_secret: ssh_key
       script:
       - pwd
+      - ls /home/arthas/staging/michael-rosenbot
 
